--- a/server/build.gradle
+++ b/server/build.gradle
@@ -41,6 +41,9 @@ dependencies {
 
     //Swagger
     compile "io.swagger:swagger-jersey-jaxrs:${revSwagger}"
+    
+    //RabbitMQ
+    compile "com.rabbitmq:amqp-client:5.5.1"
 }
 
 shadowJar {
