--- a/contribs/build.gradle
+++ b/contribs/build.gradle
@@ -2,6 +2,8 @@ dependencies {
 	
 	compile project(':conductor-common')
 	compile project(':conductor-core')
+	
+	compile "com.rabbitmq:amqp-client:5.5.1"
 
 	compile 'com.amazonaws:aws-java-sdk-sqs:latest.release'
 	compile "com.google.inject:guice:${revGuice}"
