--- a/es5-persistence/build.gradle
+++ b/es5-persistence/build.gradle
@@ -2,6 +2,7 @@ dependencies {
     compile project(':conductor-core')
 
     compile "commons-io:commons-io:${revCommonsIo}"
+    compile "com.rabbitmq:amqp-client:5.5.1"
 
 	compile "org.elasticsearch:elasticsearch:${revElasticSearch5}"
 	compile "org.elasticsearch.client:transport:${revElasticSearch5}"
